--- a/profitable_app_profiles.ipynb
+++ b/profitable_app_profiles.ipynb
@@ -1603,16 +1603,8 @@
     "\n",
     "One such recommendation that can be made for our company is to develop an app that can reside within these two categories.\n",
     "\n",
-    "A mobile gaming app that is multiplayer in nature could be a lucrative app as it "
+    "A mobile gaming app that is multiplayer in nature could be a lucrative app as it combines a mobile game with the social connection, similar to Words with Friends."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0cd52c8-5bf5-4e20-ba20-1a81d46110c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
